--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
     build:
       context: ./ui
       dockerfile: Dockerfile.dev
+    user: 0:0
     restart: on-failure
     ports:
       - "3000:3000"
