change guild id in api-s

--- a/api/src/main/resources/application.conf
+++ b/api/src/main/resources/application.conf
@@ -39,7 +39,7 @@ jam {
     adminIds = ${ADMIN_DISCORD_IDS}
 
     # TODO: Move to env when shared outside of GMTK
-    guildId = "248204508960653312"
+    guildId = ${GUILD_ID}
 }
 
 bot {
