--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,11 @@ services:
     build: ./api
     restart: on-failure
     ports:
-      - "8080:8080"
+      - "3000:3000"
     env_file:
       - ./.env
+    expose:
+      - "3000"
 
   ui:
     container_name: team-finder-ui
@@ -18,11 +20,13 @@ services:
     user: 0:0
     restart: on-failure
     ports:
-      - "3000:3000"
+      - "80:80"
     env_file:
       - ./.env
     volumes:
       - ./ui:/app
+    expose:
+      - "80"
 
   db:
     image: mongo
