--- a/ui/Dockerfile.dev
+++ b/ui/Dockerfile.dev
@@ -22,7 +22,7 @@ RUN chown -LR node /app/node_modules
 
 USER node
 
-EXPOSE 3000
+# EXPOSE 80
 
 ENTRYPOINT ["/app/docker-entrypoint.sh"]
 CMD ["npm", "run", "dev"]
