--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,19 @@
 version: '3.6'
 
+#volumes:
+#  mongodata:
+
 services:
   api:
     container_name: team-finder-api
     build: ./api
     restart: on-failure
     ports:
-      - "3000:3000"
+      - "8080:8080"
     env_file:
       - ./.env
     expose:
-      - "3000"
+      - "8080"
 
   ui:
     container_name: team-finder-ui
@@ -20,17 +23,32 @@ services:
     user: 0:0
     restart: on-failure
     ports:
-      - "80:80"
+      - "3000:3000"
     env_file:
       - ./.env
     volumes:
       - ./ui:/app
     expose:
-      - "80"
+      - "3000"
+
+  nginx:
+    image: nginx:1.23.1-alpine
+    restart: unless-stopped
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./logs/err.log:/logs/err.log
+      - ./logs/access.log:/logs/access.log
+    ports:
+      - "80:80"
+    depends_on:
+      - "ui"
+      - "api"
 
   db:
     image: mongo
     restart: always
+#    volumes:
+#      - mongodata:/data/db:ro
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: example
@@ -46,7 +64,7 @@ services:
     image: mongo-express
     restart: always
     ports:
-      - 8081:8081
+      - "8081:8081"
     environment:
       ME_CONFIG_MONGODB_ADMINUSERNAME: root
       ME_CONFIG_MONGODB_ADMINPASSWORD: example
