--- a/nginx.conf
+++ b/nginx.conf
@@ -28,6 +28,8 @@ server {
     server_name gamedevleague.com;
 
     location /api {
+	rewrite ^/api/(.*) /$1  break;
+  	
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -37,19 +39,10 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_cache_bypass $http_upgrade;
 
-	proxy_pass http://backend_api;
+	proxy_pass http://backend_api$uri$is_args$args;
     }
 
     location / {
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_cache_bypass $http_upgrade;
-
         proxy_pass http://backend_ui;
     }
 }
