--- a/nginx.conf
+++ b/nginx.conf
@@ -12,7 +12,7 @@ log_format proxy_log '$remote_addr - $remote_user [$time_local] |'
 			'"uri" $uri';
 
 upstream backend_ui {
-    server ui:3000;
+    server ui-dev:3000;
 }
 
 upstream backend_api {
