extract channel name to env

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@
 DISCORD_CLIENT_ID=CLIENT_ID
 DISCORD_CLIENT_SECRET=CLIENT_SECRET
 DISCORD_BOT_TOKEN=BOT_TOKEN
+DISCORD_BOT_CHANNEL_NAME= jam-team-notifs
 
 ### Database configuration ###
 # The format of a MongoDB URL is '$protocol://$user:$password@$host/$database'
