--- a/api/src/main/resources/application.conf
+++ b/api/src/main/resources/application.conf
@@ -45,6 +45,8 @@ jam {
 bot {
     token = default_token_to_let_app_start
     token = ${?DISCORD_BOT_TOKEN}
+    
+    channel = ${DISCORD_BOT_CHANNEL_NAME}
 
     userRateLimit = 20
     userRateLimit = ${?DISCORD_BOT_USER_RATE_LIMIT}
